--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "start": "serve -s build"
+    "preview": "vite preview"
+    
   },
   "dependencies": {
     "react": "^18.2.0",
