--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npm run dev"
+    "start": "serve -s build -l $PORT"
   },
   "dependencies": {
     "react": "^18.2.0",
